# Math

./: .gitmodules  CMakeLists.txt  README.md
Math/: Array.hpp  ArrayIterator.hpp  CMakeLists.txt
UnitTests/: CMakeLists.txt  main.cpp
UnitTests/Catch/: CMakeLists.txt
UnitTests/Containers/: ArrayTests.cpp
